# marc

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_config/config/: initial_positions.yaml  joint_limits.yaml  marc.ros2_control.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/arm_config/launch/: moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
src/marc/: CMakeLists.txt
src/marc/meshes/: base_link.STL  elbow_link.STL  shoulder_link.STL  upper_arm_link.STL
src/marc/src/: ArucoDetection_definitions.py  detector_click.py  test_publisher.py  test_subscriber.py  video_publisher.py  video_subscriber.py
src/marc/urdf/: marc.urdf
src/marc_config/: .setup_assistant  CMakeLists.txt  package.xml
src/marc_config/config/: initial_positions.yaml  joint_limits.yaml  marc.ros2_control.xacro  marc.srdf  moveit_controllers.yaml  ros2_controllers.yaml
src/marc_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  (+4 more)
src/marc_simulation/: CMakeLists.txt  package.xml
src/marc_urdf/: CMakeLists.txt  package.xml
src/scripts/: ArucoDetection_definitions.py  arm_mover.py  arm_pose.cpp  aruco_grid  blackkeyboard.py  detector.py  joint_publisher.py  key_clicker.py  key_data.py  marc_mover.py  pick_drop.py  pose_goal.py  speech_to_text.py  voice_det.py  way_point.py
src/stuff/: grid
src/yconfig/: CMakeLists.txt
src/your_moveit_config/: .setup_assistant  package.xml
(+127 files in other folders)
